<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/rounded_edge">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/update_item_header"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_itemName_label"
        android:layout_marginStart="12dp"/>
    <EditText
        android:id="@+id/itemNameEditext_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemName_hint"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_itemPrice_label"
        android:layout_marginStart="12dp"/>
    <EditText
        android:id="@+id/itemPriceEditext_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemPrice_hint"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_itemQuantity_label"
        android:layout_marginStart="12dp"/>
    <EditText
        android:id="@+id/itemQuantityEditext_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemQuantity_hint"/>

</LinearLayout>