<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/rounded_edge">

    <TextView
        android:id="@+id/headerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/add_item_header"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/add_itemName_label"
        android:textSize="20dp"
        android:layout_marginStart="14dp"/>
    <EditText
        android:id="@+id/itemNameEditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemName_hint"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        />
    <TextView
        android:id="@+id/duplicationError"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/duplication_item_error"
        android:textColor="@color/red"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/isEmpty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/inputValidation_isEmpty"
        android:textColor="@color/red"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/add_itemPrice_label"
        android:textColor="@color/black"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"/>
    <EditText
        android:id="@+id/itemPriceEditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemPrice_hint"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <TextView
        android:id="@+id/isEmptyPriceNotDouble"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/inputValidation_isNotDouble"
        android:textColor="@color/red"
        android:layout_marginStart="12dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/isEmptyPrice"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/inputValidation_isEmpty_price"
        android:textColor="@color/red"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="20dp"
        android:visibility="gone"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:text="@string/add_itemQuantity_label"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="12dp"/>
    <EditText
        android:id="@+id/itemQuantityEditext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_itemQuantity_hint"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <TextView
        android:id="@+id/isEmptyQuantity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/inputValidation_isEmpty_quantity"
        android:textColor="@color/red"
        android:layout_marginStart="12dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/isEmptyPriceNotInteger"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/inputValidation_isNotDouble"
        android:textColor="@color/red"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="12dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/okBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/ok_button_label"/>
    <Button
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_label"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>



</LinearLayout>