<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="0.25dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


 <LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/rounded_edge">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content">
 <TextView
     android:id="@+id/itemName"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
     android:textStyle="bold"
     android:text="@string/product_item_name"/>
 <TextView
     android:id="@+id/itemPrice"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textStyle="bold"
     android:textColor="@color/black"
     android:text="@string/product_item_price"
     />
 <TextView
     android:id="@+id/itemQuantity"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
     android:textStyle="bold"
     android:text="@string/product_item_quantity"/>


</LinearLayout>

  <Button
      android:id="@+id/deleteBtn"
      android:layout_width="60dp"
      android:layout_height="60dp"
      android:background="@drawable/delete_icon"
      android:visibility="visible"/>

 </LinearLayout>

</LinearLayout>